--- a/config_data.yml
+++ b/config_data.yml
@@ -88,12 +88,12 @@ reporting_status_extra_fields: []
 # below and adjust if you would like to use the Open SDG mapping functionality.
 # Note that the GeoJSON files can either be remote (as in the example below) or
 # local, relative to the src_dir specified above.
-map_layers:
- - geojson_file: district.geojson
-   name_property: spatial_al
-   id_property: gml_id
-   output_subfolder: districts
-   filename_prefix: indicator_
+# map_layers:
+#  - geojson_file: district.geojson
+#    name_property: spatial_al
+#    id_property: gml_id
+#    output_subfolder: districts
+#    filename_prefix: indicator_
 
 # Documentation settings
 # ----------------------
