--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Inject slug/short variables
       uses: rlespinasse/github-slug-action@v3.x
     - name: Set the REPOSITORY_URL_SITE environment variable
-      run: echo "REPOSITORY_URL_SITE=https://github.com/$GITHUB_REPOSITORY" >> $GITHUB_ENV
+      run: echo "REPOSITORY_URL_SITE=https://github.com/test-sdg/test-site" >> $GITHUB_ENV
     - name: Build the site
       run: |
         gem install bundler
@@ -35,7 +35,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.token }}
         BRANCH: gh-pages
         FOLDER: _site
         CLEAN: true
