--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -52,5 +52,5 @@ jobs:
       run: |
         curl -X POST https://api.github.com/repos/test-sdg/test-site/dispatches \
         -H "Accept: application/vnd.github.everest-preview+json" \
-        -H "Authorization: token ${{secrets.token}}" \
+        -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
         --data '{"event_type": "rebuild-staging"}'
